[gd_scene format=3 uid="uid://c8agvphypscbr"]

[ext_resource type="Script" uid="uid://eglakv0qdgnq" path="res://scripts/windows/WindowManager.gd" id="1_t6e0d"]
[ext_resource type="PackedScene" uid="uid://w6vdxxem78gx" path="res://scenes/singletons/windows/create_project_window/create_project_window.tscn" id="2_j68gc"]
[ext_resource type="PackedScene" uid="uid://c5jcja53wdsa6" path="res://scenes/singletons/windows/confirmation_window.tscn" id="3_b8l5p"]
[ext_resource type="PackedScene" uid="uid://biuvac2n848kk" path="res://scenes/singletons/windows/question_window.tscn" id="4_j68gc"]
[ext_resource type="PackedScene" uid="uid://cc8g0lrwisk1d" path="res://scenes/singletons/windows/export_window/export_window.tscn" id="5_b8l5p"]


[node name="WindowsManager" type="CanvasLayer" unique_id=766594223]
script = ExtResource("1_t6e0d")
metadata/_custom_type_script = "uid://eglakv0qdgnq"

[node name="CreateProjectWindow" parent="." unique_id=821259881 instance=ExtResource("2_j68gc")]
unique_name_in_owner = true
visible = false

[node name="ConfirmationWindow" parent="." unique_id=69873713 instance=ExtResource("3_b8l5p")]
unique_name_in_owner = true
title = "Remove Project"
visible = false

[node name="QuestionWindow" parent="." unique_id=1118986057 instance=ExtResource("4_j68gc")]
unique_name_in_owner = true
visible = false

[node name="ExportWindow" parent="." unique_id=374171509 instance=ExtResource("5_b8l5p")]
unique_name_in_owner = true
visible = false
